--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,25 +7,6 @@
     android:background="@color/colorPrimaryDarker"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDarker"
-        android:minHeight="?attr/actionBarSize">
-
-
-        <ImageView
-            android:id="@+id/toolbar_title"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_logo"
-            android:text="Toolbar Title" />
-
-
-    </android.support.v7.widget.Toolbar>
 
 
     <LinearLayout
@@ -218,7 +199,7 @@
                         android:layout_height="0dp"
                         android:layout_marginBottom="16dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginStart="8dp"
+                        android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:background="?android:attr/listDivider"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -545,7 +526,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/PartyLight"
+            android:id="@+id/PartyLight2"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginEnd="8dp"
@@ -601,7 +582,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/roboto_light"
                     android:paddingStart="10dp"
-                    android:text="Party Light"
+                    android:text="RGB strip"
                     android:textAlignment="center"
                     android:textColor="@color/colorTextLight"
                     android:textSize="18sp"
@@ -640,7 +621,13 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
